<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/setting_printer"
        android:title="@string/setting_printer" >
        <ListPreference
            android:key="printerModel"
            android:summary="@string/printerModel_value"
            android:title="@string/printerModel_title" />
        <ListPreference
            android:enabled="true"
            android:key="port"
            android:summary="@string/port_value"
            android:title="@string/port_title" />

        <PreferenceScreen
            android:defaultValue="@string/printer_text"
            android:key="printer"
            android:summary="@string/printer_text"
            android:title="@string/printer_title" >
        </PreferenceScreen>

        <ListPreference
            android:key="paperSize"
            android:summary="@string/paperSize_value"
            android:title="@string/paperSize_title" />
        <ListPreference
            android:entries="@array/orientation"
            android:entryValues="@array/orientationValues"
            android:key="orientation"
            android:summary="@string/orientation_value"
            android:title="@string/orientation_title" />

        <PreferenceScreen
            android:key="scaleModelSetting"
            android:summary="@string/fitToPage_value"
            android:title="@string/fitToPage_title" >
            <ListPreference
                android:enabled="true"
                android:entries="@array/fitToPage"
                android:entryValues="@array/fitToPageValues"
                android:key="printMode"
                android:summary="@string/fitToPage_value"
                android:title="@string/fitToPage_title" />

            <EditTextPreference
                android:enabled="true"
                android:key="scaleValue"
                android:summary="@string/scaleValue_value"
                android:title="@string/scaleValue_title" />
        </PreferenceScreen>

        <EditTextPreference
            android:enabled="true"
            android:key="numberOfCopies"
            android:maxLength="5"
            android:numeric="integer"
            android:summary="@string/numberOfCopies_value"
            android:title="@string/numberOfCopies_title" />

        <PreferenceScreen
            android:key="halfToningSetting"
            android:summary="@string/halfToning_value"
            android:title="@string/halfToning_title" >
            <ListPreference
                android:entries="@array/halfToning"
                android:entryValues="@array/halfToningValues"
                android:key="halftone"
                android:summary="@string/halfToning_value"
                android:title="@string/halfToning_title" />

            <EditTextPreference
                android:enabled="true"
                android:inputType="number"
                android:key="imageThresholding"
                android:summary="@string/imageThresholding_value"
                android:title="@string/imageThresholding_title" />
        </PreferenceScreen>
 

        <ListPreference
            android:entries="@array/skipStatusCheck"
            android:entryValues="@array/skipStatusCheckValues"
            android:key="skipStatusCheck"
            android:summary="@string/isskipStatusCheck_value"
            android:title="@string/isskipStatusCheck_title" />

        <ListPreference
            android:entries="@array/checkPrintEnd"
            android:entryValues="@array/checkPrintEndValues"
            android:key="checkPrintEnd"
            android:summary="@string/checkPrintEnd_value"
            android:title="@string/checkPrintEnd_title" />

 
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/otherSettings_title" >
    </PreferenceCategory>

    <PreferenceScreen
        android:key="prefIpMacAddress"
        android:summary="@string/ip_mac_value"
        android:title="@string/ip_mac_title" >
        <EditTextPreference
            android:enabled="true"
            android:key="address"
            android:summary="@string/address_value"
            android:title="@string/address_title" />
        <EditTextPreference
            android:enabled="true"
            android:key="macAddress"
            android:summary="@string/macAddress_value"
            android:title="@string/macAddress_title" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="prefAlignmentSettings"
        android:summary="@string/alignmentSettings_value"
        android:title="@string/alignmentSettings_title" >
        <ListPreference
            android:entries="@array/align"
            android:entryValues="@array/alignValues"
            android:key="align"
            android:summary="@string/align_value"
            android:title="@string/align_title" />

        <EditTextPreference
            android:enabled="true"
            android:key="leftMargin"
            android:maxLength="5"
            android:numeric="integer"
            android:summary="@string/leftMargin_value"
            android:title="@string/leftMargin_title" />

        <ListPreference
            android:entries="@array/valign"
            android:entryValues="@array/valignValues"
            android:key="valign"
            android:summary="@string/valign_value"
            android:title="@string/valign_title" />

        <EditTextPreference
            android:enabled="true"
            android:key="topMargin"
            android:maxLength="5"
            android:numeric="integer"
            android:summary="@string/topMargin_value"
            android:title="@string/topMargin_title" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="prefPJSettings"
        android:summary="@string/pjSettings_value"
        android:title="@string/pjSettings_title" >
        <ListPreference
            android:enabled="true"
            android:entries="@array/isCarbon"
            android:entryValues="@array/isCarbonValues"
            android:key="pjCarbon"
            android:summary="@string/isCarbon_value"
            android:title="@string/isCarbon_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/pjDensityValues"
            android:entryValues="@array/pjDensityValues"
            android:key="pjDensity"
            android:summary="@string/pjDensity_value"
            android:title="@string/pjDensity_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/feedMode"
            android:entryValues="@array/feedModeValues"
            android:key="pjFeedMode"
            android:summary="@string/feedMode_value"
            android:title="@string/feedMode_title" />

        <EditTextPreference
            android:enabled="true"
            android:key="customPaperWidth"
            android:maxLength="5"
            android:numeric="signed"
            android:summary="@string/customPaperWidth_value"
            android:title="@string/customPaperWidth_title" />
        <EditTextPreference
            android:enabled="true"
            android:key="customPaperLength"
            android:maxLength="5"
            android:numeric="signed"
            android:summary="@string/customPaperLength_value"
            android:title="@string/customPaperLength_title" />
        <EditTextPreference
            android:enabled="true"
            android:key="customFeed"
            android:maxLength="5"
            android:numeric="signed"
            android:summary="@string/customFeed_value"
            android:title="@string/customFeed_title" />

        <ListPreference
            android:entries="@array/align"
            android:entryValues="@array/alignValues"
            android:key="paperPostion"
            android:summary="@string/paper_pos_value"
            android:title="@string/paper_pos_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/mode9"
            android:entryValues="@array/mode9Values"
            android:key="mode9"
            android:summary="@string/mode9_value"
            android:title="@string/mode9_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/dashLine"
            android:entryValues="@array/dashLineValues"
            android:key="dashLine"
            android:summary="@string/dashLine_value"
            android:title="@string/dashLine_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/pjSpeedValues"
            android:entryValues="@array/pjSpeedValues"
            android:key="pjSpeed"
            android:summary="@string/pjSpeed_value"
            android:title="@string/pjSpeed_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/printerCase"
            android:entryValues="@array/printerCaseValues"
            android:key="printerCase"
            android:summary="@string/printerCase_value"
            android:title="@string/printerCase_title" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="prefPJTDSettings"
        android:summary="@string/pj_td_settings_value"
        android:title="@string/pj_td_settings_title" >
        <ListPreference
            android:enabled="true"
            android:key="customSetting"
            android:summary="@string/customSetting_value"
            android:title="@string/customSetting_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/rjDensityValues"
            android:entryValues="@array/rjDensityValues"
            android:key="rjDensity"
            android:summary="@string/rjDensity_value"
            android:title="@string/rjDensity_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/isRotate180"
            android:entryValues="@array/isRotate180Values"
            android:key="rotate180"
            android:summary="@string/isRotate180_value"
            android:title="@string/isRotate180_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/isPeelMode"
            android:entryValues="@array/isPeelModeValues"
            android:key="peelMode"
            android:summary="@string/isPeelMode_value"
            android:title="@string/isPeelMode_title" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="prefCutSettings"
        android:summary="@string/cutSettings_value"
        android:title="@string/cutSettings_title" >
        <ListPreference
            android:enabled="true"
            android:entries="@array/isAutoCut"
            android:entryValues="@array/isAutoCutValues"
            android:key="autoCut"
            android:summary="@string/isAutoCut_value"
            android:title="@string/isAutoCut_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/isEndCut"
            android:entryValues="@array/isEndCutValues"
            android:key="endCut"
            android:summary="@string/isEndCut_value"
            android:title="@string/isEndCut_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/halfCut"
            android:entryValues="@array/halfCutValues"
            android:key="halfCut"
            android:summary="@string/halfCut_value"
            android:title="@string/halfCut_title" />
        <ListPreference
            android:enabled="true"
            android:entries="@array/specialTape"
            android:entryValues="@array/specialTapeValues"
            android:key="specialType"
            android:summary="@string/special_tape_value"
            android:title="@string/special_tape_value" />
    </PreferenceScreen>

</PreferenceScreen>