<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="selectFileButtonOnClick"
            android:text="@string/button_select_file"
            android:visibility="invisible" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="printerSettingsButtonOnClick"
            android:text="@string/button_printer_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPrinterStatus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="printerStatusButtonOnClick"
            android:text="@string/button_printer_status" />

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="printButtonOnClick"
            android:text="@string/button_print" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/chkMultipleSelect"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/chkbox_multiple_select" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSelectedFiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/text_select_image"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp" />

</LinearLayout>